completes mvp of 2 round of specs

--- a/textarea.html
+++ b/textarea.html
@@ -147,7 +147,7 @@
       //special announcement will announce on pause
       var announceOnPause = function(event) {
         liveRegionAnnouncementOnPause = setTimeout(function() {
-          specialAnnouncement(300 - event.target.value.length)
+          specialAnnouncement(300 - event.target.value.length);
         }, 2000 );
       };
 
