--- a/wait-message.html
+++ b/wait-message.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="IE=edge">
   <title>Wait Message Examples</title>
   <title></title>
-  <meta name="description" content="s">
-  <meta name="viewport" content="width=device-width, initial-scale">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0m shrink-to-fit=no">
 </head>
 <body>
 
