--- a/wait-message.html
+++ b/wait-message.html
@@ -7,6 +7,128 @@
   <title></title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0m shrink-to-fit=no">
+  <style>
+    html {
+      background-size: cover;
+      box-sizing: border-box;
+    }
+
+    *,
+    *:before,
+    *:after {
+      box-sizing inherit;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      line-height: 1.5;
+      margin: 1rem;
+    }
+
+    :focus {
+      outline: 0;
+      position: relative;
+    }
+
+    :focus:not(body):not(html):before {
+      box-shadow: 0 0 0 4px #fff;
+      bottom: 4px;
+      content: "";
+      left: 4px;
+      position: absolute;
+      right: 4px;
+      top: 4px;
+    }
+
+    :focus:not(body):not(html):before, 
+    select:focus, 
+    input:focus {
+      outline: 4px dotted #6da003;
+    }
+
+    ::-moz-focus-inner {
+      border: 0;
+    }
+
+    .visually-hidden {
+      clip: rect(0.063rem, 0.063rem, 0.063rem, 0.063rem);
+      font-size: 1px;
+      height: .5px;
+      overflow: hidden;
+      position absolute;
+      white-space: nowrap;
+      width: .5px;
+    }
+
+    .overlay {
+      opacity: .1;
+      background: #fff;
+    }
+
+    .spin-indefinite {
+      margin: 0 auto;
+      width: 100px;
+      height: 100px;
+      border: 10px solid #DC143C;
+      border-radius: 50%;
+      border-bottom-color: rgba(0,0,0,0.34);
+      animate: spin-indefinite 2s linear infinite;
+    }
+
+    .bar-indefinite {
+      width: 50%;
+      height: 20px;
+      background-color: #DC143C;
+      animation: bar-indefinite 1s alternate-reverse infinite;
+    }
+
+    #spin-definite {
+      margin: 0 auto;
+      width: 100px;
+      height: 100px;
+      border: 10px solid rgba(0,0,0,0.34);
+      border-radius: 50%;
+    }
+
+    #bar-definite {
+      width: 0%;
+      height: 20px;
+      background-color: #DC143C;
+    }
+
+    #alert-box {
+      width: 75%;
+      position fixed;
+      left: 50%;
+      bottom: 50%;
+      margin-left: -37.5%;
+      border: solid black 1px;
+      text-align: center;
+      padding: 2%;
+    }
+
+    #animation-container {
+      width: 80%;
+      border: solid black .1px;
+      background-color: rgba(0,0,0,0.34);
+      margin: 0 auto;
+    }
+
+    @keyframes spin-indefinite {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes bar-indefinite {
+      0% {
+        margin-left: 50%;
+      }
+    }
+  </style>
 </head>
 <body>
 
