adds custom alert box

--- a/wait-message.html
+++ b/wait-message.html
@@ -188,5 +188,18 @@
       </div>
     </div>
   </main>
+
+  <div id="alert-box" tabindex="0" role="alert" hidden>
+      <div id="animation-container">
+        <div id="indef-animation" hidden></div>
+        <div id="spin-definite" hidden></div>
+        <div id="bar-definite" hidden></div>
+      </div>
+      <div role="timer">
+        <span id="visual-text" aria-hidden="true"></span>
+        <span id="live-region" class="visualy-hidden" aria-live="assertive"></span>
+      </div>
+      <button id="continue" aria-live="assertive" hidden>Cancel</button>
+  </div>
 </body>
 </html>
